--- a/src/css/imports/_general.scss
+++ b/src/css/imports/_general.scss
@@ -14,7 +14,7 @@ img {
 
 h2 {
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.2;
 }
 
